deployment/kubernetes/service.yml

apiVersion: v1
kind: Service
metadata:
  name: qr-cafe-service
  namespace: qr-cafe
spec:
  selector:
    app: qr-cafe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
